--- a/services/package.json
+++ b/services/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
-    "@google-cloud/language": "^2.0.0"
+    "@google-cloud/language": "^2.0.0",
+    "djv": "^2.1.1",
+    "jest-pytest": "^0.7.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest",
+    "test:report": "jest --coverage"
   }
 }
