--- a/services/functions/package.json
+++ b/services/functions/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@google-cloud/language": "^2.0.0",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "googleapis": "^35.0.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint-plugin-promise": "^3.6.0",
+    "jest": "^23.6.0"
   },
   "private": true
 }
