--- a/services/functions/package.json
+++ b/services/functions/package.json
@@ -9,10 +9,15 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "6"
+  },
   "dependencies": {
+    "@google-cloud/firestore": "^0.19.0",
     "@google-cloud/language": "^2.0.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
+    "firebase-tools": "^6.2.2",
     "googleapis": "^35.0.0"
   },
   "devDependencies": {
